bin_PROGRAMS = hw
AM_CPPFLAGS = -I$(top_srcdir)/vendor/onigmo
hw_SOURCES = \
			 src/highway.c \
			 src/file.c \
			 src/scan.c \
			 src/file_queue.c \
			 src/line_list.c \
			 src/worker.c \
			 src/search.c \
			 src/print.c \
			 src/ignore.c \
			 src/log.c \
			 src/option.c \
			 src/util.c \
			 src/regex.c \
			 src/fjs.c \
			 src/hwmalloc.c \
			 src/help.c \
			 src/color.c \
			 vendor/onigmo/regcomp.c \
			 vendor/onigmo/regenc.c \
			 vendor/onigmo/regerror.c \
			 vendor/onigmo/regexec.c \
			 vendor/onigmo/regext.c \
			 vendor/onigmo/reggnu.c \
			 vendor/onigmo/regparse.c \
			 vendor/onigmo/regposerr.c \
			 vendor/onigmo/regposix.c \
			 vendor/onigmo/regsyntax.c \
			 vendor/onigmo/regtrav.c \
			 vendor/onigmo/regversion.c \
			 vendor/onigmo/st.c \
			 vendor/onigmo/enc/ascii.c \
			 vendor/onigmo/enc/big5.c \
			 vendor/onigmo/enc/cp1251.c \
			 vendor/onigmo/enc/cp932.c \
			 vendor/onigmo/enc/euc_jp.c \
			 vendor/onigmo/enc/euc_kr.c \
			 vendor/onigmo/enc/euc_tw.c \
			 vendor/onigmo/enc/gb18030.c \
			 vendor/onigmo/enc/iso8859_1.c \
			 vendor/onigmo/enc/iso8859_10.c \
			 vendor/onigmo/enc/iso8859_11.c \
			 vendor/onigmo/enc/iso8859_13.c \
			 vendor/onigmo/enc/iso8859_14.c \
			 vendor/onigmo/enc/iso8859_15.c \
			 vendor/onigmo/enc/iso8859_16.c \
			 vendor/onigmo/enc/iso8859_2.c \
			 vendor/onigmo/enc/iso8859_3.c \
			 vendor/onigmo/enc/iso8859_4.c \
			 vendor/onigmo/enc/iso8859_5.c \
			 vendor/onigmo/enc/iso8859_6.c \
			 vendor/onigmo/enc/iso8859_7.c \
			 vendor/onigmo/enc/iso8859_8.c \
			 vendor/onigmo/enc/iso8859_9.c \
			 vendor/onigmo/enc/koi8.c \
			 vendor/onigmo/enc/koi8_r.c \
			 vendor/onigmo/enc/mktable.c \
			 vendor/onigmo/enc/sjis.c \
			 vendor/onigmo/enc/unicode.c \
			 vendor/onigmo/enc/utf16_be.c \
			 vendor/onigmo/enc/utf16_le.c \
			 vendor/onigmo/enc/utf32_be.c \
			 vendor/onigmo/enc/utf32_le.c \
			 vendor/onigmo/enc/utf8.c


.PHONY: all clean
